--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,9 @@
   "description": "Proyecto 1",
   "main": "App.js",
   "scripts": {
-    "start": "nodemon App.js",
+    "server": "nodemon App.js",
+    "client": "npm run dev --prefix ../client",
+    "dev": "concurrently \"npm run server\" \"npm run client\"",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Toyama Rodrigo",
