--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "@emotion/styled": "^11.3.0",
     "axios": "^0.21.4",
     "framer-motion": "^4.1.17",
+    "moment": "^2.29.1",
     "react": "^17.0.0",
     "react-dom": "^17.0.0"
   },
